--- a/VW.qmd
+++ b/VW.qmd
@@ -1,6 +1,4 @@
----
-title: "Vibrations & Waves"
----
+# Vibrations & Waves
 
 ## Circular Motion:
 using polar coordinates is simpler for circular motion
